Java 17 fixes